# HajimeBot-Presales

./: README.md  package.json
programs/hajime-ticket/: Cargo.toml
programs/hajime-ticket/src/: event.rs  lib.rs
tests/: anchor.ts
