[package]
name = "hajime-ticket"
authors = ["Irvin Shek <irvinshek@gmail.com>"]
version = "0.1.0"
description = "Selling ticket by hajime"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hajime_ticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"]}
solana-program = "1.16.24"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
